syntax = "proto3";

package ledger;

option go_package = "github.com/viacheslavprokosa/quantlo";

// ─── Ledger Operations ────────────────────────────────────────────────────────

message SpendRequest {
    string account_id      = 1;
    string idempotency_key = 2;
    int64  amount          = 3;
    string resource_type   = 4;
}

message SpendResponse {
    bool   success       = 1;
    string error_message = 2;
    int64  new_balance   = 3;
    string status        = 4;
}

message RechargeRequest {
    string account_id    = 1;
    int64  amount        = 2;
    string resource_type = 3;
}

message RechargeResponse {
    bool   success       = 1;
    string error_message = 2;
    string status        = 3;
}

service LedgerService {
    rpc Spend(SpendRequest)       returns (SpendResponse);
    rpc Recharge(RechargeRequest) returns (RechargeResponse);
}

// ─── Event Bus (optional gRPC provider) ──────────────────────────────────────

message EventRequest {
    string topic   = 1;
    bytes  payload = 2;
}

message EventResponse {
    bool success = 1;
}

service EventService {
    rpc Publish(EventRequest) returns (EventResponse);
}